# stx-gimp-plugin

./: .buckconfig  .gitignore  BUCK  LICENSE  README.md  buckaroo.lock.toml  buckaroo.toml  meson.build
include/: dialog.h  gimp_interop.h
src/: .stxread.cpp.swp  bytes.cpp  dialog.cpp  gimp_interop.cpp  main.cpp  saving.cpp  stxread.cpp  stxwrite.cpp
src/headers/: bytes.h  dialog.h  gimp_interop.h  saving.h  structure.h  stxread.h  stxwrite.h  value.h
src/stx/: BUCK  bytes.cpp  read.cpp  stxread.cpp  stxwrite.cpp  write.cpp
src/stx/headers/: bytes.h  image.h  read.h  structure.h  stxread.h  stxwrite.h  value.h  write.h
src/ui/: BUCK  stxconfig.c  stxnumberfield.c  stxparams.c  stxsavedialog.c
src/ui/headers/: stxconfig.h  stxnumberfield.h  stxparams.h  stxsavedialog.h
subprojects/neither/: README.md  meson.build
subprojects/neither/include/: .gitignore
subprojects/stx/: meson.build
subprojects/stx/include/stx/: structure.h  value.h
subprojects/stx/include/stx/geom/: decoder.h  factory.h  pc_decoder.h
subprojects/stx/src/stx/: read.cpp  write.cpp
subprojects/stx/src/stx/geom/: factory.cpp  pc_decoder.cpp
subprojects/stx/src/utils/: bytes.cpp  bytes.test.cpp
subprojects/ui/: meson.build
subprojects/ui/include/ui/: stxsavedialog.h
subprojects/ui/src/: stxconfig.c  stxparams.c
tests/bytes/: little8.cpp
